# ca-verda

./:  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  config.yaml  pyproject.toml  verda_instance_types.json
.github/workflows/: build-publish.yaml
manifests/autoscaler/: cluster-autoscaler-cm.yaml  cluster-autoscaler.yaml
manifests/examples/: cpu-test-job.yaml  gpu-test-job.yaml
manifests/provider/: configmap.yaml  deployment.yaml  kustomizations.yaml  service.yaml  serviceaccount.yaml
scripts/: generate_protos.sh  generate_protos2.sh  verda_init.sh
src/clusterautoscaler/cloudprovider/v1/externalgrpc/: externalgrpc_pb2.py  externalgrpc_pb2.pyi  externalgrpc_pb2_grpc.py
src/k8s/io/api/core/v1/: generated_pb2.py  generated_pb2.pyi  generated_pb2_grpc.py
src/k8s/io/apimachinery/pkg/api/resource/: generated_pb2.py  generated_pb2_grpc.py
src/k8s/io/apimachinery/pkg/apis/meta/v1/: generated_pb2.py  generated_pb2.pyi  generated_pb2_grpc.py
src/k8s/io/apimachinery/pkg/runtime/: generated_pb2.py  generated_pb2_grpc.py
src/k8s/io/apimachinery/pkg/runtime/schema/: generated_pb2_grpc.py
src/k8s/io/apimachinery/pkg/util/intstr/: generated_pb2.py  generated_pb2_grpc.py
src/verda_cloud_provider/: instance_metadata_service.py  main.py  provider.py  settings.py  startup_script_service.py  state_store.py
src/verda_cloud_provider/utils/: logging.py  parse_args.py
templates/: verda_init.sh.j2
tests/: test_provider.py
